spec/e2e/variable/undefined_global.lit
println notDefined;  # error: [line 1] Undefined variable 'notDefined'.
